# java-angular/book-social-network/book-network-ui/src/app/services/models/user-response.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface UserResponse {
+  accountLocked?: boolean;
+  enable?: boolean;
+  firstname?: string;
+  lastname?: string;
+}
